--- a/editing_calendar_statement.ipynb
+++ b/editing_calendar_statement.ipynb
@@ -79,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "'C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/MQL4/Files/calendar_statement_2024_6_2.csv'"
+       "'C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/MQL4/Files/calendar_statement_2024_6_9.csv'"
       ]
      },
      "execution_count": 5,
@@ -90,7 +90,7 @@
    "source": [
     "# import \"calendar_statement_\" + year + month + day + \".csv\" with year month and day being the date of last sunday\n",
     "# find the day  of the last sunday\n",
-    "today = datetime.date.today() + datetime.timedelta(days=1)\n",
+    "today = datetime.date.today() + datetime.timedelta(days=0)\n",
     "sunday = today# - datetime.timedelta(days=today.weekday() + 1)\n",
     "year = sunday.year\n",
     "month = sunday.month\n",
@@ -146,276 +146,101 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2024.06.03 10:00:00</td>\n",
-       "      <td>(Austria) Unemployment Rate</td>\n",
+       "      <td>2024.06.12 15:30:00</td>\n",
+       "      <td>(United States) CPI s.a</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2024.06.03 10:15:00</td>\n",
-       "      <td>(Spain) HCOB Manufacturing PMI</td>\n",
+       "      <td>2024.06.12 15:30:00</td>\n",
+       "      <td>(United States) Core Inflation Rate MoM</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2024.06.03 10:45:00</td>\n",
-       "      <td>(Italy) HCOB Manufacturing PMI</td>\n",
+       "      <td>2024.06.12 15:30:00</td>\n",
+       "      <td>(United States) CPI</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2024.06.03 10:50:00</td>\n",
-       "      <td>(France) HCOB Manufacturing PMI</td>\n",
+       "      <td>2024.06.12 15:30:00</td>\n",
+       "      <td>(United States) Inflation Rate MoM</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2024.06.03 10:55:00</td>\n",
-       "      <td>(Germany) HCOB Manufacturing PMI</td>\n",
+       "      <td>2024.06.12 15:30:00</td>\n",
+       "      <td>(United States) Core Inflation Rate YoY</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>2024.06.03 11:00:00</td>\n",
-       "      <td>(Euro Area) HCOB Manufacturing PMI</td>\n",
+       "      <td>2024.06.12 15:30:00</td>\n",
+       "      <td>(United States) Inflation Rate YoY</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>2024.06.03 11:00:00</td>\n",
-       "      <td>(Greece) S&amp;P Global Manufacturing PMI</td>\n",
+       "      <td>2024.06.12 21:00:00</td>\n",
+       "      <td>(United States) Fed Interest Rate Decision</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>2024.06.03 16:45:00</td>\n",
-       "      <td>(United States) S&amp;P Global Manufacturing PMI</td>\n",
+       "      <td>2024.06.12 21:00:00</td>\n",
+       "      <td>(United States) FOMC Economic Projections</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>2024.06.03 17:00:00</td>\n",
-       "      <td>(United States) ISM Manufacturing PMI</td>\n",
+       "      <td>2024.06.12 21:30:00</td>\n",
+       "      <td>(United States) Fed Press Conference</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>2024.06.04 10:00:00</td>\n",
-       "      <td>(Spain) Unemployment Change</td>\n",
-       "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2024.06.04 10:55:00</td>\n",
-       "      <td>(Germany) Unemployment Rate</td>\n",
-       "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2024.06.04 10:55:00</td>\n",
-       "      <td>(Germany) Unemployment Change</td>\n",
-       "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2024.06.04 17:00:00</td>\n",
-       "      <td>(United States) JOLTs Job Openings</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>2024.06.05 10:15:00</td>\n",
-       "      <td>(Spain) HCOB Services PMI</td>\n",
-       "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>2024.06.05 10:45:00</td>\n",
-       "      <td>(Italy) HCOB Services PMI</td>\n",
-       "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>2024.06.05 10:50:00</td>\n",
-       "      <td>(France) HCOB Services PMI</td>\n",
-       "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>2024.06.05 10:55:00</td>\n",
-       "      <td>(Germany) HCOB Services PMI</td>\n",
-       "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>2024.06.05 11:00:00</td>\n",
-       "      <td>(Euro Area) HCOB Services PMI</td>\n",
-       "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>2024.06.05 15:15:00</td>\n",
-       "      <td>(United States) ADP Employment Change</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>2024.06.05 16:45:00</td>\n",
-       "      <td>(United States) S&amp;P Global Services PMI</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>2024.06.05 17:00:00</td>\n",
-       "      <td>(United States) ISM Services PMI</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>2024.06.06 11:00:00</td>\n",
-       "      <td>(Italy) Retail Sales YoY</td>\n",
-       "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>2024.06.06 11:00:00</td>\n",
-       "      <td>(Italy) Retail Sales MoM</td>\n",
-       "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>2024.06.06 12:00:00</td>\n",
-       "      <td>(Euro Area) Retail Sales YoY</td>\n",
-       "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>2024.06.06 12:00:00</td>\n",
-       "      <td>(Euro Area) Retail Sales MoM</td>\n",
-       "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>2024.06.06 15:15:00</td>\n",
-       "      <td>(Euro Area) Deposit Facility Rate</td>\n",
-       "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>2024.06.06 15:15:00</td>\n",
-       "      <td>(Euro Area) ECB Interest Rate Decision</td>\n",
-       "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>2024.06.06 15:30:00</td>\n",
+       "      <td>2024.06.13 15:30:00</td>\n",
        "      <td>(United States) Continuing Jobless Claims</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>2024.06.06 15:30:00</td>\n",
+       "      <th>10</th>\n",
+       "      <td>2024.06.13 15:30:00</td>\n",
        "      <td>(United States) Initial Jobless Claims</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>2024.06.06 15:30:00</td>\n",
+       "      <th>11</th>\n",
+       "      <td>2024.06.13 15:30:00</td>\n",
        "      <td>(United States) Jobless Claims 4-week Average</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>2024.06.06 15:45:00</td>\n",
-       "      <td>(Euro Area) ECB Press Conference</td>\n",
-       "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>2024.06.07 09:00:00</td>\n",
-       "      <td>(Germany) Balance of Trade</td>\n",
-       "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>2024.06.07 12:00:00</td>\n",
-       "      <td>(Euro Area) Employment Change YoY</td>\n",
-       "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>2024.06.07 12:00:00</td>\n",
-       "      <td>(Euro Area) Employment Change QoQ</td>\n",
-       "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>2024.06.07 15:30:00</td>\n",
-       "      <td>(United States) U-6 Unemployment Rate</td>\n",
+       "      <th>12</th>\n",
+       "      <td>2024.06.13 15:30:00</td>\n",
+       "      <td>(United States) PPI MoM</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>2024.06.07 15:30:00</td>\n",
-       "      <td>(United States) Nonfarm Payrolls Private</td>\n",
+       "      <th>13</th>\n",
+       "      <td>2024.06.14 17:00:00</td>\n",
+       "      <td>(United States) Michigan Consumer Sentiment</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>2024.06.07 15:30:00</td>\n",
-       "      <td>(United States) Unemployment Rate</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>2024.06.07 15:30:00</td>\n",
-       "      <td>(United States) Non Farm Payrolls</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>2024.06.07 17:15:00</td>\n",
-       "      <td>(Euro Area) ECB President Lagarde Speech</td>\n",
-       "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -423,86 +248,36 @@
       ],
       "text/plain": [
        "                   Date                                          Event Impact  \\\n",
-       "0   2024.06.03 10:00:00                    (Austria) Unemployment Rate   High   \n",
-       "1   2024.06.03 10:15:00                 (Spain) HCOB Manufacturing PMI   High   \n",
-       "2   2024.06.03 10:45:00                 (Italy) HCOB Manufacturing PMI   High   \n",
-       "3   2024.06.03 10:50:00                (France) HCOB Manufacturing PMI   High   \n",
-       "4   2024.06.03 10:55:00               (Germany) HCOB Manufacturing PMI   High   \n",
-       "5   2024.06.03 11:00:00             (Euro Area) HCOB Manufacturing PMI   High   \n",
-       "6   2024.06.03 11:00:00          (Greece) S&P Global Manufacturing PMI   High   \n",
-       "7   2024.06.03 16:45:00   (United States) S&P Global Manufacturing PMI   High   \n",
-       "8   2024.06.03 17:00:00          (United States) ISM Manufacturing PMI   High   \n",
-       "9   2024.06.04 10:00:00                    (Spain) Unemployment Change   High   \n",
-       "10  2024.06.04 10:55:00                    (Germany) Unemployment Rate   High   \n",
-       "11  2024.06.04 10:55:00                  (Germany) Unemployment Change   High   \n",
-       "12  2024.06.04 17:00:00             (United States) JOLTs Job Openings   High   \n",
-       "13  2024.06.05 10:15:00                      (Spain) HCOB Services PMI   High   \n",
-       "14  2024.06.05 10:45:00                      (Italy) HCOB Services PMI   High   \n",
-       "15  2024.06.05 10:50:00                     (France) HCOB Services PMI   High   \n",
-       "16  2024.06.05 10:55:00                    (Germany) HCOB Services PMI   High   \n",
-       "17  2024.06.05 11:00:00                  (Euro Area) HCOB Services PMI   High   \n",
-       "18  2024.06.05 15:15:00          (United States) ADP Employment Change   High   \n",
-       "19  2024.06.05 16:45:00        (United States) S&P Global Services PMI   High   \n",
-       "20  2024.06.05 17:00:00               (United States) ISM Services PMI   High   \n",
-       "21  2024.06.06 11:00:00                       (Italy) Retail Sales YoY   High   \n",
-       "22  2024.06.06 11:00:00                       (Italy) Retail Sales MoM   High   \n",
-       "23  2024.06.06 12:00:00                   (Euro Area) Retail Sales YoY   High   \n",
-       "24  2024.06.06 12:00:00                   (Euro Area) Retail Sales MoM   High   \n",
-       "25  2024.06.06 15:15:00              (Euro Area) Deposit Facility Rate   High   \n",
-       "26  2024.06.06 15:15:00         (Euro Area) ECB Interest Rate Decision   High   \n",
-       "27  2024.06.06 15:30:00      (United States) Continuing Jobless Claims   High   \n",
-       "28  2024.06.06 15:30:00         (United States) Initial Jobless Claims   High   \n",
-       "29  2024.06.06 15:30:00  (United States) Jobless Claims 4-week Average   High   \n",
-       "30  2024.06.06 15:45:00               (Euro Area) ECB Press Conference   High   \n",
-       "31  2024.06.07 09:00:00                     (Germany) Balance of Trade   High   \n",
-       "32  2024.06.07 12:00:00              (Euro Area) Employment Change YoY   High   \n",
-       "33  2024.06.07 12:00:00              (Euro Area) Employment Change QoQ   High   \n",
-       "34  2024.06.07 15:30:00          (United States) U-6 Unemployment Rate   High   \n",
-       "35  2024.06.07 15:30:00       (United States) Nonfarm Payrolls Private   High   \n",
-       "36  2024.06.07 15:30:00              (United States) Unemployment Rate   High   \n",
-       "37  2024.06.07 15:30:00              (United States) Non Farm Payrolls   High   \n",
-       "38  2024.06.07 17:15:00       (Euro Area) ECB President Lagarde Speech   High   \n",
+       "0   2024.06.12 15:30:00                        (United States) CPI s.a   High   \n",
+       "1   2024.06.12 15:30:00        (United States) Core Inflation Rate MoM   High   \n",
+       "2   2024.06.12 15:30:00                            (United States) CPI   High   \n",
+       "3   2024.06.12 15:30:00             (United States) Inflation Rate MoM   High   \n",
+       "4   2024.06.12 15:30:00        (United States) Core Inflation Rate YoY   High   \n",
+       "5   2024.06.12 15:30:00             (United States) Inflation Rate YoY   High   \n",
+       "6   2024.06.12 21:00:00     (United States) Fed Interest Rate Decision   High   \n",
+       "7   2024.06.12 21:00:00      (United States) FOMC Economic Projections   High   \n",
+       "8   2024.06.12 21:30:00           (United States) Fed Press Conference   High   \n",
+       "9   2024.06.13 15:30:00      (United States) Continuing Jobless Claims   High   \n",
+       "10  2024.06.13 15:30:00         (United States) Initial Jobless Claims   High   \n",
+       "11  2024.06.13 15:30:00  (United States) Jobless Claims 4-week Average   High   \n",
+       "12  2024.06.13 15:30:00                        (United States) PPI MoM   High   \n",
+       "13  2024.06.14 17:00:00    (United States) Michigan Consumer Sentiment   High   \n",
        "\n",
        "   Currency  \n",
-       "0       EUR  \n",
-       "1       EUR  \n",
-       "2       EUR  \n",
-       "3       EUR  \n",
-       "4       EUR  \n",
-       "5       EUR  \n",
-       "6       EUR  \n",
+       "0       USD  \n",
+       "1       USD  \n",
+       "2       USD  \n",
+       "3       USD  \n",
+       "4       USD  \n",
+       "5       USD  \n",
+       "6       USD  \n",
        "7       USD  \n",
        "8       USD  \n",
-       "9       EUR  \n",
-       "10      EUR  \n",
-       "11      EUR  \n",
+       "9       USD  \n",
+       "10      USD  \n",
+       "11      USD  \n",
        "12      USD  \n",
-       "13      EUR  \n",
-       "14      EUR  \n",
-       "15      EUR  \n",
-       "16      EUR  \n",
-       "17      EUR  \n",
-       "18      USD  \n",
-       "19      USD  \n",
-       "20      USD  \n",
-       "21      EUR  \n",
-       "22      EUR  \n",
-       "23      EUR  \n",
-       "24      EUR  \n",
-       "25      EUR  \n",
-       "26      EUR  \n",
-       "27      USD  \n",
-       "28      USD  \n",
-       "29      USD  \n",
-       "30      EUR  \n",
-       "31      EUR  \n",
-       "32      EUR  \n",
-       "33      EUR  \n",
-       "34      USD  \n",
-       "35      USD  \n",
-       "36      USD  \n",
-       "37      USD  \n",
-       "38      EUR  "
+       "13      USD  "
       ]
      },
      "execution_count": 6,
