--- a/editing_calendar_statement.ipynb
+++ b/editing_calendar_statement.ipynb
@@ -79,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "'C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/MQL4/Files/calendar_statement_2024_6_9.csv'"
+       "'C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/MQL4/Files/calendar_statement_2024_6_16.csv'"
       ]
      },
      "execution_count": 5,
@@ -146,99 +146,148 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2024.06.12 15:30:00</td>\n",
-       "      <td>(United States) CPI s.a</td>\n",
+       "      <td>2024.06.17 15:30:00</td>\n",
+       "      <td>(United States) NY Empire State Manufacturing ...</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2024.06.12 15:30:00</td>\n",
-       "      <td>(United States) Core Inflation Rate MoM</td>\n",
+       "      <td>2024.06.18 12:00:00</td>\n",
+       "      <td>(Euro Area) CPI</td>\n",
        "      <td>High</td>\n",
-       "      <td>USD</td>\n",
+       "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2024.06.12 15:30:00</td>\n",
-       "      <td>(United States) CPI</td>\n",
+       "      <td>2024.06.18 12:00:00</td>\n",
+       "      <td>(Germany) ZEW Economic Sentiment Index</td>\n",
        "      <td>High</td>\n",
-       "      <td>USD</td>\n",
+       "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2024.06.12 15:30:00</td>\n",
-       "      <td>(United States) Inflation Rate MoM</td>\n",
+       "      <td>2024.06.18 15:30:00</td>\n",
+       "      <td>(United States) Retail Sales Ex Gas/Autos MoM</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2024.06.12 15:30:00</td>\n",
-       "      <td>(United States) Core Inflation Rate YoY</td>\n",
+       "      <td>2024.06.18 15:30:00</td>\n",
+       "      <td>(United States) Retail Sales YoY</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>2024.06.12 15:30:00</td>\n",
-       "      <td>(United States) Inflation Rate YoY</td>\n",
+       "      <td>2024.06.18 15:30:00</td>\n",
+       "      <td>(United States) Retail Sales Ex Autos MoM</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>2024.06.12 21:00:00</td>\n",
-       "      <td>(United States) Fed Interest Rate Decision</td>\n",
+       "      <td>2024.06.18 15:30:00</td>\n",
+       "      <td>(United States) Retail Sales MoM</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>2024.06.12 21:00:00</td>\n",
-       "      <td>(United States) FOMC Economic Projections</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2024.06.12 21:30:00</td>\n",
-       "      <td>(United States) Fed Press Conference</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2024.06.13 15:30:00</td>\n",
+       "      <td>2024.06.20 15:30:00</td>\n",
        "      <td>(United States) Continuing Jobless Claims</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2024.06.13 15:30:00</td>\n",
+       "      <th>8</th>\n",
+       "      <td>2024.06.20 15:30:00</td>\n",
        "      <td>(United States) Initial Jobless Claims</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2024.06.13 15:30:00</td>\n",
+       "      <th>9</th>\n",
+       "      <td>2024.06.20 15:30:00</td>\n",
        "      <td>(United States) Jobless Claims 4-week Average</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2024.06.13 15:30:00</td>\n",
-       "      <td>(United States) PPI MoM</td>\n",
+       "      <th>10</th>\n",
+       "      <td>2024.06.20 15:30:00</td>\n",
+       "      <td>(United States) Building Permits</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2024.06.21 10:15:00</td>\n",
+       "      <td>(France) HCOB Services PMI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2024.06.21 10:15:00</td>\n",
+       "      <td>(France) HCOB Manufacturing PMI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>2024.06.14 17:00:00</td>\n",
-       "      <td>(United States) Michigan Consumer Sentiment</td>\n",
+       "      <td>2024.06.21 10:30:00</td>\n",
+       "      <td>(Germany) HCOB Services PMI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2024.06.21 10:30:00</td>\n",
+       "      <td>(Germany) HCOB Manufacturing PMI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2024.06.21 11:00:00</td>\n",
+       "      <td>(Euro Area) HCOB Manufacturing PMI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2024.06.21 11:00:00</td>\n",
+       "      <td>(Euro Area) HCOB Services PMI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2024.06.21 16:45:00</td>\n",
+       "      <td>(United States) S&amp;P Global Manufacturing PMI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2024.06.21 16:45:00</td>\n",
+       "      <td>(United States) S&amp;P Global Services PMI</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2024.06.21 17:00:00</td>\n",
+       "      <td>(United States) Existing Home Sales MoM</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2024.06.21 17:00:00</td>\n",
+       "      <td>(United States) Existing Home Sales</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
@@ -247,37 +296,51 @@
        "</div>"
       ],
       "text/plain": [
-       "                   Date                                          Event Impact  \\\n",
-       "0   2024.06.12 15:30:00                        (United States) CPI s.a   High   \n",
-       "1   2024.06.12 15:30:00        (United States) Core Inflation Rate MoM   High   \n",
-       "2   2024.06.12 15:30:00                            (United States) CPI   High   \n",
-       "3   2024.06.12 15:30:00             (United States) Inflation Rate MoM   High   \n",
-       "4   2024.06.12 15:30:00        (United States) Core Inflation Rate YoY   High   \n",
-       "5   2024.06.12 15:30:00             (United States) Inflation Rate YoY   High   \n",
-       "6   2024.06.12 21:00:00     (United States) Fed Interest Rate Decision   High   \n",
-       "7   2024.06.12 21:00:00      (United States) FOMC Economic Projections   High   \n",
-       "8   2024.06.12 21:30:00           (United States) Fed Press Conference   High   \n",
-       "9   2024.06.13 15:30:00      (United States) Continuing Jobless Claims   High   \n",
-       "10  2024.06.13 15:30:00         (United States) Initial Jobless Claims   High   \n",
-       "11  2024.06.13 15:30:00  (United States) Jobless Claims 4-week Average   High   \n",
-       "12  2024.06.13 15:30:00                        (United States) PPI MoM   High   \n",
-       "13  2024.06.14 17:00:00    (United States) Michigan Consumer Sentiment   High   \n",
+       "                   Date                                              Event  \\\n",
+       "0   2024.06.17 15:30:00  (United States) NY Empire State Manufacturing ...   \n",
+       "1   2024.06.18 12:00:00                                    (Euro Area) CPI   \n",
+       "2   2024.06.18 12:00:00             (Germany) ZEW Economic Sentiment Index   \n",
+       "3   2024.06.18 15:30:00      (United States) Retail Sales Ex Gas/Autos MoM   \n",
+       "4   2024.06.18 15:30:00                   (United States) Retail Sales YoY   \n",
+       "5   2024.06.18 15:30:00          (United States) Retail Sales Ex Autos MoM   \n",
+       "6   2024.06.18 15:30:00                   (United States) Retail Sales MoM   \n",
+       "7   2024.06.20 15:30:00          (United States) Continuing Jobless Claims   \n",
+       "8   2024.06.20 15:30:00             (United States) Initial Jobless Claims   \n",
+       "9   2024.06.20 15:30:00      (United States) Jobless Claims 4-week Average   \n",
+       "10  2024.06.20 15:30:00                   (United States) Building Permits   \n",
+       "11  2024.06.21 10:15:00                         (France) HCOB Services PMI   \n",
+       "12  2024.06.21 10:15:00                    (France) HCOB Manufacturing PMI   \n",
+       "13  2024.06.21 10:30:00                        (Germany) HCOB Services PMI   \n",
+       "14  2024.06.21 10:30:00                   (Germany) HCOB Manufacturing PMI   \n",
+       "15  2024.06.21 11:00:00                 (Euro Area) HCOB Manufacturing PMI   \n",
+       "16  2024.06.21 11:00:00                      (Euro Area) HCOB Services PMI   \n",
+       "17  2024.06.21 16:45:00       (United States) S&P Global Manufacturing PMI   \n",
+       "18  2024.06.21 16:45:00            (United States) S&P Global Services PMI   \n",
+       "19  2024.06.21 17:00:00            (United States) Existing Home Sales MoM   \n",
+       "20  2024.06.21 17:00:00                (United States) Existing Home Sales   \n",
        "\n",
-       "   Currency  \n",
-       "0       USD  \n",
-       "1       USD  \n",
-       "2       USD  \n",
-       "3       USD  \n",
-       "4       USD  \n",
-       "5       USD  \n",
-       "6       USD  \n",
-       "7       USD  \n",
-       "8       USD  \n",
-       "9       USD  \n",
-       "10      USD  \n",
-       "11      USD  \n",
-       "12      USD  \n",
-       "13      USD  "
+       "   Impact Currency  \n",
+       "0    High      USD  \n",
+       "1    High      EUR  \n",
+       "2    High      EUR  \n",
+       "3    High      USD  \n",
+       "4    High      USD  \n",
+       "5    High      USD  \n",
+       "6    High      USD  \n",
+       "7    High      USD  \n",
+       "8    High      USD  \n",
+       "9    High      USD  \n",
+       "10   High      USD  \n",
+       "11   High      EUR  \n",
+       "12   High      EUR  \n",
+       "13   High      EUR  \n",
+       "14   High      EUR  \n",
+       "15   High      EUR  \n",
+       "16   High      EUR  \n",
+       "17   High      USD  \n",
+       "18   High      USD  \n",
+       "19   High      USD  \n",
+       "20   High      USD  "
       ]
      },
      "execution_count": 6,
